[package]
name = "advent-of-code"
version = "0.2020.0"
authors = ["Carlos Macasaet <rust-developer@carlos-m.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashers = "1.0.1"
lazy_static = "1.4.0"
rayon = "1.5.3"
regex = "1"
serde = "1.0.148"
serde_derive = "1.0.147"
toml = "0.5.9"
unicode-segmentation = "1.10.0"