[package]
name = "advent-of-code"
version = "0.2022.0"
authors = ["Carlos Macasaet <rust-developer@carlos-m.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashers = "1.0.1"
lazy_static = "1.4.0"
rayon = "1.6.1"
regex = "1"
serde = "1.0.152"
serde_derive = "1.0.152"
toml = "0.7.0"
unicode-segmentation = "1.10.1"
[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",
]